--- a/composer.json
+++ b/composer.json
@@ -1,54 +1,61 @@
 {
-  "name": "burakdalyanda/cipher-weave",
-  "description": "description",
-  "license": "GNU GPLv3",
-  "type": "library",
-  "keywords": [
-    "cipher",
-    "weave",
-    "encryption",
-    "decryption",
-    "laravel",
-    "laravel-package",
-    "laravel-encryption",
-    "laravel-decryption",
-    "response-encryption",
-    "response-decryption",
-    "request-encryption",
-    "request-decryption"
-  ],
-  "authors": [
-    {
-      "name": "Burak Dalyanda",
-      "email": "burak.dalyanda@hotmail.com",
-      "role": "Developer"
+    "name": "burakdalyanda/cipher-weave",
+    "description": "description",
+    "license": "GNU GPLv3",
+    "type": "library",
+    "keywords": [
+        "cipher",
+        "weave",
+        "encryption",
+        "decryption",
+        "laravel",
+        "laravel-package",
+        "laravel-encryption",
+        "laravel-decryption",
+        "response-encryption",
+        "response-decryption",
+        "request-encryption",
+        "request-decryption"
+    ],
+    "authors": [
+        {
+            "name": "Burak Dalyanda",
+            "email": "burak.dalyanda@hotmail.com",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": "^8.0",
+        "illuminate/support": "^8.12|^9.0|^10.0|^11.0",
+        "illuminate/contracts": "^8.12|^9.0|^10.0|^11.0",
+        "illuminate/encryption": "^8.12|^9.0|^10.0|^11.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^6.23|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.4|^10.1"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "BurakDalyanda\\CipherWeave\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "BurakDalyanda\\CipherWeave\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "BurakDalyanda\\CipherWeave\\CipherWeaveServiceProvider"
+            ]
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "format": "php-cs-fixer fix --allow-risky=yes",
+        "analyze": "phpstan analyse"
     }
-  ],
-  "require": {
-    "php": "^8.0",
-    "illuminate/support": "^8.12|^9.0|^10.0|^11.0",
-    "illuminate/contracts": "^8.12|^9.0|^10.0|^11.0",
-    "illuminate/encryption": "^8.12|^9.0|^10.0|^11.0"
-  },
-  "require-dev": {
-    "orchestra/testbench": "^6.23|^7.0|^8.0|^9.0",
-    "phpunit/phpunit": "^9.4|^10.1"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "autoload": {
-    "psr-4": {
-      "Dalyanda\\CipherWeave\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Dalyanda\\CipherWeave\\Tests\\": "tests/"
-    }
-  },
-  "scripts": {
-    "test": "phpunit",
-    "format": "php-cs-fixer fix --allow-risky=yes",
-    "analyze": "phpstan analyse"
-  }
 }
